# agentic-research-assistant

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_db.py
agents/: base_agent.py  langgraph_workflow.py  planner.py  researcher.py  reviewer.py  writer.py
chroma_db/: chroma.sqlite3
config/: settings.py
core/: citation_manager.py  history.py  llm.py  prompts.py  state.py
database/: connection.py  schema.py
frontend/: __init__.py  styles.py
output/: AI_in_Finance.docx  AWS_for_Data_and_AI_Engineers_report.docx  Agentic_AI_in_2026_report.docx  Analysis_of_Multi-Agent_AI_Systems_in_Enterprise_Applications_report.docx  Analysis_of_the_ReAct_Framework_for_Agentic_AI_report.docx  Building_Enterprise_Knowledge_Assistants_Using_RAG_and_Agentic_AI_report.docx  Databricks_as_a_Platform_for_Enterprise_AI_and_Machine_Learning_report.docx  Databricks_report.docx  Emerging_AI,_Cloud,_and_Software_Development_Technologies_Enterprises_Should_Adopt_in_2026_report.docx  Enterprise_Adoption_of_Agentic_AI_report.docx  Evaluating_LangGraph_for_Production-Grade_AI_Agent_Development_report.docx  Future_of_Enterprise_AI_report.docx  LangGraph_and_Multi-Agent_Systems_report.docx  LangGraph_vs_CrewAI_vs_AutoGen_report.docx  Methods_for_Evaluating_Large_Language_Models_in_Enterprise_Environments_report.docx  Modern_AI-Based_Fraud_Detection_Systems_in_Banking_and_Financial_Services_report.docx  Prompt_Engineering_report.docx  RAG_Systems_report.docx  Roadmap_to_Become_an_AI_Engineer_in_2026_report.docx  (+3 more)
rag/: chunker.py  (+1 more)
(+6 files in other folders)
