[project]
name = "researchpilot-ai"
version = "0.1.0"
description = "Agentic Research & Technical Documentation Assistant"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "requests",
]

[tool.ruff]
line-length = 100